# BaneServer

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  db.sql  dev.config.toml  header
.github/workflows/: rust.yml
src/: api.rs  cli.rs  db.rs  main.rs  message.rs  prelude.rs  state.rs  webpages.rs  websocket.rs
src/api/: filestream.rs
templates/: explore  joke  live-logs  root.html  script.js  script2.js  streamrcv.html  test.css  test.html
