[package]
name = "bane_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.4.1"
async-trait = "0.1.72"
axum = "0.6.20"
clap = { version = "4.0.32", features = ["derive"] }
console-subscriber = "0.1.9"
dashmap = "5.4.0"
either = "1.8.1"
futures = "0.3.25"
http = "0.2.9"
hyper = "0.14.27"
notify = "5.1.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features=["stream"] }
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
tera = "1.17.1"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
